Tue Jan 23 02:46:36 2001  George Lebl <jirka@5z.com>

	* gnome-dentry.c: include gnome-url.c, apply xalf patch from Peter
	  ?strand <astrand@lysator.liu.se>, default to true, and fix a minor
	  leak in addition to some beatuification of the patch before
	  application (to be more in gnome style).

Tue Dec 26 10:45:50 2000  George Lebl <jirka@5z.com>

	* gnome-util.c (g_copy_vector):  Allow argument to be NULL, better
	  then SEGV.  Fixes SEGVs in the panel and anything using
	  gnome-dentry.

2000-12-26  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-moz-remote.c (main): Give preference to mozilla while
	auto-detecting. 

2000-10-23  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): check for NULL
	->type's in the previous patch

Fri Sep 15 18:53:26 2000  George Lebl <jirka@5z.com>

	* gnome-dentry.c: Apply patch from Rodney Dawes <dobez@thehelm.com>
	  to launch URL's for Type=URL dentries

2000-07-26  John Sullivan  <sullivan@eazel.com>

	* libgnome/gnome-sound.c: 
	(use_sound): Moved this function out of a #ifndef HAVE_LIBAUDIOFILE
	and into #ifdef HAVE_ESD. This fixes the build breakage caused
	earlier today by Miguel's change.

2000-07-26  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* gnomelib-init.c (gnomelib_option_cb): default to not starting
	esd, which is what most people have used for most of the time

2000-07-11  Miguel de Icaza  <miguel@gnu.org>

	* gnome-sound.c (gnome_sound_init): Store the esound hostname
	here.
	(gnome_sound_play): Use the use_sound routine here.
	(gnome_sound_sample_load): ditto.
	(use_sound): Delayed initialization of sound.

Wed Jul 12 02:18:29 2000  George Lebl <jirka@5z.com>

	* gnome-mime-info.c: copy the language list we get out of gnome-i18n
	  before we reverse it as that is an internal list and modifying it
	  would is bad juju.  I bet this solves some of the i18n bugs I've
	  seen.

2000-06-29  Jacob Berkman  <jacob@helixcode.com>
