@@ -1,3 +1,11 @@
+2001-02-26  jacob berkman  <jacob@ximian.com>
+
+	* gnome-mime.c: 
+	* gnome-help.c: don't include gtk.h
+
+	* gnome-url.c: default to using nautilus for help browsing if it
+	is available
+
 Tue Jan 23 02:46:36 2001  George Lebl <jirka@5z.com>
 
 	* gnome-dentry.c: include gnome-url.c, apply xalf patch from Peter
